src/logoparsing/LogoParser.java
// $ANTLR ANTLRVersion> LogoParser.java generatedTimestamp>

  package logoparsing;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LogoParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__100=1, T__99=2, T__98=3, T__97=4, T__96=5, T__95=6, T__94=7, T__93=8, 
		T__92=9, T__91=10, T__90=11, T__89=12, T__88=13, T__87=14, T__86=15, T__85=16, 
		T__84=17, T__83=18, T__82=19, T__81=20, T__80=21, T__79=22, T__78=23, 
		T__77=24, T__76=25, T__75=26, T__74=27, T__73=28, T__72=29, T__71=30, 
		T__70=31, T__69=32, T__68=33, T__67=34, T__66=35, T__65=36, T__64=37, 
		T__63=38, T__62=39, T__61=40, T__60=41, T__59=42, T__58=43, T__57=44, 
		T__56=45, T__55=46, T__54=47, T__53=48, T__52=49, T__51=50, T__50=51, 
		T__49=52, T__48=53, T__47=54, T__46=55, T__45=56, T__44=57, T__43=58, 
		T__42=59, T__41=60, T__40=61, T__39=62, T__38=63, T__37=64, T__36=65, 
		T__35=66, T__34=67, T__33=68, T__32=69, T__31=70, T__30=71, T__29=72, 
		T__28=73, T__27=74, T__26=75, T__25=76, T__24=77, T__23=78, T__22=79, 
		T__21=80, T__20=81, T__19=82, T__18=83, T__17=84, T__16=85, T__15=86, 
		T__14=87, T__13=88, T__12=89, T__11=90, T__10=91, T__9=92, T__8=93, T__7=94, 
		T__6=95, T__5=96, T__4=97, T__3=98, T__2=99, T__1=100, T__0=101, INT=102, 
		COLOR=103, WS=104, VARIABLE_AFF=105, VARIABLE_VAL=106;
	public static final String[] tokenNames = {
		"<INVALID>", "'QUOTIENT'", "'*'", "'tg'", "'LC'", "'sqrt'", "'LEVECRAYON'", 
		"'false'", "'ent'", "'HASARD'", "'rac'", "'prod'", "'FCAP'", "'FIXECAP'", 
		"'ve'", "'fcc'", "'PROD'", "'couleur'", "')'", "'nettoie'", "'RESTE'", 
		"'produit'", "'TANTQUE'", "'AV'", "'droite'", "'QUOT'", "'quotient'", 
		"'gauche'", "'|'", "'!'", "'tan'", "'DONNE'", "'sin'", "'-'", "'floor'", 
		"'BAISSECRAYON'", "'somme'", "'REPETE'", "'VE'", "'TG'", "'true'", "'NETTOIE'", 
		"'+'", "'rec'", "'BC'", "'PRODUIT'", "'SIN'", "'DIFF'", "'cos'", "'>'", 
		"'FLOOR'", "'avance'", "'/'", "'baissecrayon'", "'COS'", "'LOOP'", "'ENT'", 
		"'&'", "'GAUCHE'", "'['", "'DROITE'", "'<'", "'!='", "'dr'", "'SI'", "'RE'", 
		"'SOMME'", "'<='", "'GA'", "'AVANCE'", "'REC'", "'recule'", "'rc'", "'FPOS'", 
		"'CAP'", "'bc'", "'DR'", "'='", "'lc'", "'FCC'", "'diff'", "'fixecap'", 
		"'hasard'", "'td'", "']'", "'fpos'", "'SQRT'", "'('", "'RC'", "'RECULE'", 
		"'levecrayon'", "'re'", "'ga'", "'fcap'", "'RAC'", "'TAN'", "'reste'", 
		"'av'", "'TD'", "'COULEUR'", "'>='", "'quot'", "INT", "COLOR", "WS", "VARIABLE_AFF", 
		"VARIABLE_VAL"
	};
	public static final int
		RULE_programme = 0, RULE_alternative = 1, RULE_bloc = 2, RULE_liste_instructions = 3, 
		RULE_instruction = 4, RULE_instruction_unaire = 5, RULE_bool = 6, RULE_expression = 7;
	public static final String[] ruleNames = {
		"programme", "alternative", "bloc", "liste_instructions", "instruction", 
		"instruction_unaire", "bool", "expression"
	};

	@Override
	public String getGrammarFileName() { return "Logo.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public LogoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgrammeContext extends ParserRuleContext {
		public List<BlocContext> bloc() {
			return getRuleContexts(BlocContext.class);
		}
		public BlocContext bloc(int i) {
			return getRuleContext(BlocContext.class,i);
		}
		public ProgrammeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programme; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).enterProgramme(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).exitProgramme(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogoVisitor ) return ((LogoVisitor<? extends T>)visitor).visitProgramme(this);
			else return null;
		}
	}

	public final ProgrammeContext programme() throws RecognitionException {
		ProgrammeContext _localctx = new ProgrammeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programme);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(17); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(16); bloc();
				}
				}
				setState(19); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 3) | (1L << 4) | (1L << 6) | (1L << 12) | (1L << 13) | (1L << 14) | (1L << 15) | (1L << 17) | (1L << 19) | (1L << 22) | (1L << 23) | (1L << 24) | (1L << 27) | (1L << 31) | (1L << 35) | (1L << 37) | (1L << 38) | (1L << 39) | (1L << 41) | (1L << 43) | (1L << 44) | (1L << 51) | (1L << 53) | (1L << 58) | (1L << 60) | (1L << 63))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (64 - 64)) | (1L << (65 - 64)) | (1L << (68 - 64)) | (1L << (69 - 64)) | (1L << (70 - 64)) | (1L << (71 - 64)) | (1L << (73 - 64)) | (1L << (75 - 64)) | (1L << (76 - 64)) | (1L << (78 - 64)) | (1L << (79 - 64)) | (1L << (81 - 64)) | (1L << (83 - 64)) | (1L << (85 - 64)) | (1L << (89 - 64)) | (1L << (90 - 64)) | (1L << (91 - 64)) | (1L << (92 - 64)) | (1L << (93 - 64)) | (1L << (97 - 64)) | (1L << (98 - 64)) | (1L << (99 - 64)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlternativeContext extends ParserRuleContext {
		public List<BlocContext> bloc() {
			return getRuleContexts(BlocContext.class);
		}
		public BlocContext bloc(int i) {
			return getRuleContext(BlocContext.class,i);
		}
		public AlternativeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alternative; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).enterAlternative(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).exitAlternative(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogoVisitor ) return ((LogoVisitor<? extends T>)visitor).visitAlternative(this);
			else return null;
		}
	}

	public final AlternativeContext alternative() throws RecognitionException {
		AlternativeContext _localctx = new AlternativeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_alternative);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			_la = _input.LA(1);
			if (_la==59) {
				{
				setState(21); match(59);
				setState(23); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(22); bloc();
					}
					}
					setState(25); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 3) | (1L << 4) | (1L << 6) | (1L << 12) | (1L << 13) | (1L << 14) | (1L << 15) | (1L << 17) | (1L << 19) | (1L << 22) | (1L << 23) | (1L << 24) | (1L << 27) | (1L << 31) | (1L << 35) | (1L << 37) | (1L << 38) | (1L << 39) | (1L << 41) | (1L << 43) | (1L << 44) | (1L << 51) | (1L << 53) | (1L << 58) | (1L << 60) | (1L << 63))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (64 - 64)) | (1L << (65 - 64)) | (1L << (68 - 64)) | (1L << (69 - 64)) | (1L << (70 - 64)) | (1L << (71 - 64)) | (1L << (73 - 64)) | (1L << (75 - 64)) | (1L << (76 - 64)) | (1L << (78 - 64)) | (1L << (79 - 64)) | (1L << (81 - 64)) | (1L << (83 - 64)) | (1L << (85 - 64)) | (1L << (89 - 64)) | (1L << (90 - 64)) | (1L << (91 - 64)) | (1L << (92 - 64)) | (1L << (93 - 64)) | (1L << (97 - 64)) | (1L << (98 - 64)) | (1L << (99 - 64)))) != 0) );
				setState(27); match(84);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlocContext extends ParserRuleContext {
		public BlocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloc; }
	 
		public BlocContext() { }
		public void copyFrom(BlocContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class REPETEFORContext extends BlocContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<BlocContext> bloc() {
			return getRuleContexts(BlocContext.class);
		}
		public BlocContext bloc(int i) {
			return getRuleContext(BlocContext.class,i);
		}
		public REPETEFORContext(BlocContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).enterREPETEFOR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).exitREPETEFOR(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogoVisitor ) return ((LogoVisitor<? extends T>)visitor).visitREPETEFOR(this);
			else return null;
		}
	}
	public static class IfContext extends BlocContext {
		public List<BlocContext> bloc() {
			return getRuleContexts(BlocContext.class);
		}
		public AlternativeContext alternative() {
			return getRuleContext(AlternativeContext.class,0);
		}
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public BlocContext bloc(int i) {
			return getRuleContext(BlocContext.class,i);
		}
		public IfContext(BlocContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).enterIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).exitIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogoVisitor ) return ((LogoVisitor<? extends T>)visitor).visitIf(this);
			else return null;
		}
	}
	public static class TantqueContext extends BlocContext {
		public List<BlocContext> bloc() {
			return getRuleContexts(BlocContext.class);
		}
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public BlocContext bloc(int i) {
			return getRuleContext(BlocContext.class,i);
		}
		public TantqueContext(BlocContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).enterTantque(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).exitTantque(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogoVisitor ) return ((LogoVisitor<? extends T>)visitor).visitTantque(this);
			else return null;
		}
	}
	public static class InstrContext extends BlocContext {
		public Liste_instructionsContext liste_instructions() {
			return getRuleContext(Liste_instructionsContext.class,0);
		}
		public InstrContext(BlocContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).enterInstr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).exitInstr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogoVisitor ) return ((LogoVisitor<? extends T>)visitor).visitInstr(this);
			else return null;
		}
	}

	public final BlocContext bloc() throws RecognitionException {
		BlocContext _localctx = new BlocContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bloc);
		int _la;
		try {
			setState(63);
			switch (_input.LA(1)) {
			case 3:
			case 4:
			case 6:
			case 12:
			case 13:
			case 14:
			case 15:
			case 17:
			case 19:
			case 23:
			case 24:
			case 27:
			case 31:
			case 35:
			case 38:
			case 39:
			case 41:
			case 43:
			case 44:
			case 51:
			case 53:
			case 58:
			case 60:
			case 63:
			case 65:
			case 68:
			case 69:
			case 70:
			case 71:
			case 73:
			case 75:
			case 76:
			case 78:
			case 79:
			case 81:
			case 83:
			case 85:
			case 89:
			case 90:
			case 91:
			case 92:
			case 93:
			case 97:
			case 98:
			case 99:
				_localctx = new InstrContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(31); liste_instructions();
				}
				break;
			case 37:
				_localctx = new REPETEFORContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(32); match(37);
				setState(33); expression(0);
				setState(34); match(59);
				setState(36); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(35); bloc();
					}
					}
					setState(38); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 3) | (1L << 4) | (1L << 6) | (1L << 12) | (1L << 13) | (1L << 14) | (1L << 15) | (1L << 17) | (1L << 19) | (1L << 22) | (1L << 23) | (1L << 24) | (1L << 27) | (1L << 31) | (1L << 35) | (1L << 37) | (1L << 38) | (1L << 39) | (1L << 41) | (1L << 43) | (1L << 44) | (1L << 51) | (1L << 53) | (1L << 58) | (1L << 60) | (1L << 63))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (64 - 64)) | (1L << (65 - 64)) | (1L << (68 - 64)) | (1L << (69 - 64)) | (1L << (70 - 64)) | (1L << (71 - 64)) | (1L << (73 - 64)) | (1L << (75 - 64)) | (1L << (76 - 64)) | (1L << (78 - 64)) | (1L << (79 - 64)) | (1L << (81 - 64)) | (1L << (83 - 64)) | (1L << (85 - 64)) | (1L << (89 - 64)) | (1L << (90 - 64)) | (1L << (91 - 64)) | (1L << (92 - 64)) | (1L << (93 - 64)) | (1L << (97 - 64)) | (1L << (98 - 64)) | (1L << (99 - 64)))) != 0) );
				setState(40); match(84);
				}
				break;
			case 64:
				_localctx = new IfContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(42); match(64);
				setState(43); bool(0);
				setState(44); match(59);
				setState(46); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(45); bloc();
					}
					}
					setState(48); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 3) | (1L << 4) | (1L << 6) | (1L << 12) | (1L << 13) | (1L << 14) | (1L << 15) | (1L << 17) | (1L << 19) | (1L << 22) | (1L << 23) | (1L << 24) | (1L << 27) | (1L << 31) | (1L << 35) | (1L << 37) | (1L << 38) | (1L << 39) | (1L << 41) | (1L << 43) | (1L << 44) | (1L << 51) | (1L << 53) | (1L << 58) | (1L << 60) | (1L << 63))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (64 - 64)) | (1L << (65 - 64)) | (1L << (68 - 64)) | (1L << (69 - 64)) | (1L << (70 - 64)) | (1L << (71 - 64)) | (1L << (73 - 64)) | (1L << (75 - 64)) | (1L << (76 - 64)) | (1L << (78 - 64)) | (1L << (79 - 64)) | (1L << (81 - 64)) | (1L << (83 - 64)) | (1L << (85 - 64)) | (1L << (89 - 64)) | (1L << (90 - 64)) | (1L << (91 - 64)) | (1L << (92 - 64)) | (1L << (93 - 64)) | (1L << (97 - 64)) | (1L << (98 - 64)) | (1L << (99 - 64)))) != 0) );
				setState(50); match(84);
				setState(51); alternative();
				}
				break;
			case 22:
				_localctx = new TantqueContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(53); match(22);
				setState(54); bool(0);
				setState(55); match(59);
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(56); bloc();
					}
					}
					setState(59); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 3) | (1L << 4) | (1L << 6) | (1L << 12) | (1L << 13) | (1L << 14) | (1L << 15) | (1L << 17) | (1L << 19) | (1L << 22) | (1L << 23) | (1L << 24) | (1L << 27) | (1L << 31) | (1L << 35) | (1L << 37) | (1L << 38) | (1L << 39) | (1L << 41) | (1L << 43) | (1L << 44) | (1L << 51) | (1L << 53) | (1L << 58) | (1L << 60) | (1L << 63))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (64 - 64)) | (1L << (65 - 64)) | (1L << (68 - 64)) | (1L << (69 - 64)) | (1L << (70 - 64)) | (1L << (71 - 64)) | (1L << (73 - 64)) | (1L << (75 - 64)) | (1L << (76 - 64)) | (1L << (78 - 64)) | (1L << (79 - 64)) | (1L << (81 - 64)) | (1L << (83 - 64)) | (1L << (85 - 64)) | (1L << (89 - 64)) | (1L << (90 - 64)) | (1L << (91 - 64)) | (1L << (92 - 64)) | (1L << (93 - 64)) | (1L << (97 - 64)) | (1L << (98 - 64)) | (1L << (99 - 64)))) != 0) );
				setState(61); match(84);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Liste_instructionsContext extends ParserRuleContext {
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public Liste_instructionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_liste_instructions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).enterListe_instructions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).exitListe_instructions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogoVisitor ) return ((LogoVisitor<? extends T>)visitor).visitListe_instructions(this);
			else return null;
		}
	}

	public final Liste_instructionsContext liste_instructions() throws RecognitionException {
		Liste_instructionsContext _localctx = new Liste_instructionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_liste_instructions);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(66); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(65); instruction();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(68); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			} while ( _alt!=2 && _alt!=-1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
	 
		public InstructionContext() { }
		public void copyFrom(InstructionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AffectNumContext extends InstructionContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode VARIABLE_AFF() { return getToken(LogoParser.VARIABLE_AFF, 0); }
		public AffectNumContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).enterAffectNum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).exitAffectNum(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogoVisitor ) return ((LogoVisitor<? extends T>)visitor).visitAffectNum(this);
			else return null;
		}
	}
	public static class AffectBoolContext extends InstructionContext {
		public TerminalNode VARIABLE_AFF() { return getToken(LogoParser.VARIABLE_AFF, 0); }
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public AffectBoolContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).enterAffectBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).exitAffectBool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogoVisitor ) return ((LogoVisitor<? extends T>)visitor).visitAffectBool(this);
			else return null;
		}
	}
	public static class VeContext extends InstructionContext {
		public VeContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).enterVe(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).exitVe(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogoVisitor ) return ((LogoVisitor<? extends T>)visitor).visitVe(this);
			else return null;
		}
	}
	public static class FposContext extends InstructionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public FposContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).enterFpos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).exitFpos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogoVisitor ) return ((LogoVisitor<? extends T>)visitor).visitFpos(this);
			else return null;
		}
	}
	public static class LcContext extends InstructionContext {
		public LcContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).enterLc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).exitLc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogoVisitor ) return ((LogoVisitor<? extends T>)visitor).visitLc(this);
			else return null;
		}
	}
	public static class InstrUnaireContext extends InstructionContext {
		public Instruction_unaireContext instruction_unaire() {
			return getRuleContext(Instruction_unaireContext.class,0);
		}
		public InstrUnaireContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).enterInstrUnaire(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).exitInstrUnaire(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogoVisitor ) return ((LogoVisitor<? extends T>)visitor).visitInstrUnaire(this);
			else return null;
		}
	}
	public static class BcContext extends InstructionContext {
		public BcContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).enterBc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogoListener ) ((LogoListener)listener).exitBc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogoVisitor ) return ((LogoVisitor<? extends T>)visitor).visitBc(this);
			else return null;
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_instruction);
		int _la;
		try {
			setState(86);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new AffectNumContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(70); match(31);
				setState(71); match(VARIABLE_AFF);
				setState(72); expression(0);
				}
				break;

			case 2:
				_localctx = new AffectBoolContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(73); match(31);
				setState(74); match(VARIABLE_AFF);
				setState(75); bool(0);
				}
				break;

			case 3:
				_localctx = new InstrUnaireContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(76); instruction_unaire();
				}
				break;

			case 4:
				_localctx = new BcContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(77);
				_la = _input.LA(1);
				if ( !(((((_la - 35)) & ~0x3f) == 0 && ((1L << (_la - 35)) & ((1L << (35 - 35)) | (1L << (44 - 35)) | (1L << (53 - 35)) | (1L << (75 - 35)))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				break;

			case 5:
				_localctx = new LcContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(78);
				_la = _input.LA(1);
				if ( !(_la==4 || _la==6 || _la==78 || _la==90) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				break;
